@@ -3158,12 +3158,10 @@ stripcaged weapons 25321 34228
 <p>Teleports a unit to given coordinates.</p>
 <p>Examples:</p>
 <pre class="literal-block">
-teleport showunitid                 - prints unitid beneath cursor
-teleport showpos                    - prints coordinates beneath cursor
-teleport unit 1234 x 56 y 115 z 26  - teleports unit 1234 to 56,115,26
+teleport -showunitid                 - prints unitid beneath cursor
+teleport -showpos                    - prints coordinates beneath cursor
+teleport -unit 1234 -x 56 -y 115 -z 26  - teleports unit 1234 to 56,115,26
 </pre>
-<p>One or both of <tt class="docutils literal">unit</tt> and <tt class="docutils literal">x</tt>/<tt class="docutils literal">y</tt>/<tt class="docutils literal">z</tt> coordinate positions must be
-specified.  If one is omitted, the unit or position beneath the cursor is used.</p>
 </div>
 <div class="section" id="undump-buildings">
 <h2><a class="toc-backref" href="#id155">undump-buildings</a></h2>
