@@ -2425,12 +2425,9 @@ Teleports a unit to given coordinates.
 
 Examples::
 
-    teleport showunitid                 - prints unitid beneath cursor
-    teleport showpos                    - prints coordinates beneath cursor
-    teleport unit 1234 x 56 y 115 z 26  - teleports unit 1234 to 56,115,26
-
-One or both of ``unit`` and ``x``/``y``/``z`` coordinate positions must be 
-specified.  If one is omitted, the unit or position beneath the cursor is used.
+    teleport -showunitid                 - prints unitid beneath cursor
+    teleport -showpos                    - prints coordinates beneath cursor
+    teleport -unit 1234 -x 56 -y 115 -z 26  - teleports unit 1234 to 56,115,26
 
 undump-buildings
 ================
