@@ -2,6 +2,7 @@ DFHack Future
     Internals:
         - EventManager: deals with frame_counter getting reset properly now.
         - modtools/item-trigger: fixed equip/unequip bug and corrected minor documentation error
+        - teleport: Updated with proper argument handling and proper unit-at-destination handling.
 
 DFHack 0.40.14-r1
     Internals:
